multiprocess by chunks

--- a/settings.json
+++ b/settings.json
@@ -3,8 +3,8 @@
 	"Always show key overlay": true,
 	"Song volume": 100,
 	"Effect volume": 75,
-	"Enable PP counter": true,
-	"Enable Strain Graph": true,
+	"Enable PP counter": false,
+	"Enable Strain Graph": false,
 	"Use FFmpeg video writer": false,
 	"FFmpeg codec": "libx265",
 	"FFmpeg custom commands": "-preset ultrafast -crf 23",
